# fast-check

engine/: pyproject.toml  requirements.txt
engine/fast_check/: helper.py  run_check.py
engine/tests/: test_checks.py
ui/: Dockerfile  pyproject.toml
ui/src/ui/: app.py
ui/src/ui/templates/: alert.html  checks.html  form.html  index.html
