[project]
name = "fast-check"
description = "Fast Check"
readme = "README.md"
version = "0.1"
requires-python = ">=3.10"
authors = [{ email = "vasu04111@gmail.com" }, { name = "Vasu Gaur" }]
dynamic = ["dependencies"]

[build-system]
requires = [
    "setuptools==69.0.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["fast_check"]
include = ["fast_check*"]


[tool.pytest.ini_options]
pythonpath = ["src"]