[project]
name = "ui"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vijay Kiran", email = "mail@vijaykiran.com" }
]
dependencies = [
    "litestar[standard]>=2.11.0",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ui"]

[tool.rye.scripts]
dev = "litestar --app ui.app:app run --reload --debug"
